--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,8 @@
 <%- include('shared/head.ejs') %>
 </head>
 
-<%- include('shared/navigation.ejs') %>
-<h1>Page Not Found!</h1>
+<body>
+    <%- include('shared/navigation.ejs') %>
+    <h1>Page Not Found!</h1>
 
 <%- include('shared/end.ejs') %>
