--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,5 +1,9 @@
 <%- include('../shared/head.ejs') %>
-</head>
+    </head>
 
-<%- include('../shared/navigation.ejs') %>
-<%- include('../shared/end.ejs') %>
+    <body>
+        <%- include('../shared/navigation.ejs') %>
+        <main>
+            <h1>Nothing there!</h1>
+        </main>
+        <%- include('../shared/end.ejs') %>
